--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"/>
+    <img
+    src="C:\Users\Phantom\Downloads\Untitled design.png"
+    alt="Phanty Travels"/>
+    <img
+    src="C:\Users\Phantom\Downloads\PHANTY TRAVELS.gif"
+    alt="Phanty Travels"
+    title="Tembea Kenya as you ease your mind and soul"/>
   </body>
 </html>
